# tabitha

./: CMakeLists.txt  license  readme  readme.md  readme.readme.md  tabitha.desktop
doc/install/debian/: readme.md
doc/install/ubuntu/: readme.md
doc/install/windows/: readme.md
docinstall/: readme.md  windows.md
glade/: readme.glade  tabitha.glade
image/logo/: makefile  readme  readme.logo
include/: aspect.h  calendar.h  company.h  contact.h  edit.h  email.h  error.h  format.h  glade.h  menu.h  password.h  product.h  receipt.h  sales.h  session.h  smtp.h  smtp_client.h  trim.h  version.h
make/: makefile.mingw64
packaging/mingw64/: makefile  tabitha.iss
sql/: schema.sql
src/: aspect.c  aspect_form.c  calendar.c  calendar_form.c  company.c  company_form.c  contact.c  contact_form.c  contact_index_form.c  edit_form.c  email.c  email_form.c  error.c  format.c  glade.c  main.c  menu.c  password.c  product.c  product_form.c  product_index_form.c  receipt.c  receipt_form.c  receipt_index_form.c  sales.c  sales_detail.c  sales_detail_form.c  sales_email.c  sales_form.c  sales_index_form.c  sales_print.c  session.c  smtp.c  smtp_client.c  tabitha.rc  trim.c  version.c
